changed btn arrow-right from font-awesome to react-icon and fixed gap between navbar and dropdown menu on smaller screens

--- a/components/MobileMenu/MobileMenu.module.scss
+++ b/components/MobileMenu/MobileMenu.module.scss
@@ -7,7 +7,7 @@
   padding: 2rem 3rem;
   position: absolute;
   right: 0;
-  top: 6rem;
+  top: 5rem;
   text-align: center;
   overflow-y: scroll;
 }
@@ -70,6 +70,9 @@
 }
 
 @media (max-width: 500px) {
+  .mobileMenu {
+    top: 4rem;
+  }
   .subLinks {
     display: block;
     right: 0;
@@ -83,5 +86,11 @@
     & li {
       text-align: center;
     }
+  }
+}
+
+@media (max-width: 400px) {
+  .mobileMenu {
+    top: 3rem;
   }
 }
